<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/registration_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/select_image"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:maxLines="1"
                android:textColor="@color/background_color"
                android:textSize="16sp"
                android:layout_weight="1"
                android:enabled="false"/>

            <ImageView
                android:id="@+id/img_select"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:srcCompat="@drawable/ic_camera_black_24dp"
                android:tint="@color/background_color"/>
        </LinearLayout>

        <View
            android:id="@+id/username_divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/fullName"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:maxLines="1"
            android:textColor="@color/background_color"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/postion_prompt"
                android:textSize="16sp"/>

            <Spinner
                android:id="@+id/select_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/positions_arrays"
                android:layout_weight="1"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/joining_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/joining_date_prompt"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:maxLines="1"
                android:textColor="@color/background_color"
                android:textSize="16sp"
                android:layout_weight="1"
                android:enabled="false"/>

            <ImageView
                android:id="@+id/img_calender"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/ic_today_black_24dp"
                android:tint="@color/background_color"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/development_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/development_filed"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:maxLines="1"
            android:textColor="@color/background_color"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:maxLines="1"
            android:textColor="@color/background_color"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/about_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/about_me"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:minLines="3"
            android:maxLines="5"
            android:textColor="@color/background_color"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <Button
            android:id="@+id/add_developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_developer"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/background_color"/>
    </LinearLayout>
</FrameLayout>